# facai_server

./: Cargo.toml  README.md  generate_db.sh
config_helper/: Cargo.toml
config_helper/src/: config.rs  lib.rs
configs/: default.toml
database/: Cargo.toml
database/src/: connection.rs
entities/: Cargo.toml  prelude.rs.bak
entities/src/entities/: admin_menu.rs  admin_permissions.rs  admin_roles.rs  admin_settings.rs  admin_users.rs  carmis.rs  coupons.rs  coupons_goods.rs  daili.rs  daili_group.rs  emailtpls.rs  failed_jobs.rs  fish.rs  fish_browse.rs  goods.rs  goods_group.rs  migrations.rs  mod.rs  options.rs  orders.rs  pays.rs  sessions.rs  system_settings.rs
server/: Cargo.toml
server/src/: application.rs  daili.rs  daili_group.rs  data_cache_manager.rs  env.rs  fish.rs  fish_browse.rs  main.rs  options.rs  telegram_bot.rs  tron.rs  utils.rs
server/src/bus/: event.rs
server/src/bus/event/: event_manager.rs  events.rs
server/src/bus/event/events/: data_cache_updated_event.rs
server/src/daili/: daili_cache.rs  daili_manager.rs
server/src/daili_group/: daili_group_cache.rs
server/src/fish/: fish_cache.rs  fish_manager.rs
server/src/fish_browse/: fish_browse_broad_caster.rs  fish_browse_cache.rs  fish_browse_manager.rs
server/src/options/: options_cache.rs
server/src/telegram_bot/: command.rs  fish_command.rs  telegram_bot_manager.rs
server/src/tron/: account.rs  block.rs  broadcast_transaction_resp.rs  tron_block_scanner.rs  tron_manager.rs
server/src/utils/: common.rs  tron.rs
