
[workspace]
resolver = "3"
members = [
    "server",
    "config_helper",
    "entities",
    "database"
]

[workspace.dependencies]
config_helper = {path = "config_helper"}
entities = {path = "entities"}
database = {path = "database"}

parking_lot = { version = "0.12.4" }
dashmap = { version = "7.0.0-rc2" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "local-time", "registry"] }
tracing-appender = "0.2.3"
kameo = { version = "0.17.2", features = ["default"]}
tokio = { version = "1.47", features = [ "full" ] }
anyhow = { version = "1.0.99" }
thiserror = { version = "2.0.16" }
serde = { version = "1.0.219", features = ["default", "derive"]}
serde_json = "1.0.143"
anychain-core = { version = "0.1.8" }
anychain-tron = { version = "0.2.13" }
rust_utils = { git = "https://github.com/saintEvol/rust_utils.git", features = ["full"] }
futures-util = "0.3.31"
config = { git = "https://github.com/rust-cli/config-rs.git", tag = "v0.15.11" }
once_cell = "1.21.3"
sea-orm = { version = "1.1.15", features = [ "default", "sqlx-mysql", "runtime-tokio", "uuid", "serde_json", "with-uuid" ] }
teloxide = { version = "0.17.0", features = ["full"] }
