
[package]
name = "server"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
parking_lot.workspace = true
futures-util.workspace = true
database.workspace = true
sea-orm.workspace = true
entities.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
config_helper.workspace = true
tokio.workspace = true
kameo.workspace = true
anychain-core.workspace = true
anychain-tron.workspace = true
once_cell.workspace = true
dashmap.workspace = true
