
[package]
name = "server"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
rust_utils.workspace = true
rust_decimal.workspace = true
primitive-types.workspace = true
sha2.workspace = true
libsecp256k1.workspace = true
chrono.workspace = true
tiny-keccak.workspace = true
sha3.workspace = true
teloxide.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
futures-util.workspace = true
database.workspace = true
sea-orm.workspace = true
entities.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
config_helper.workspace = true
tokio.workspace = true
kameo.workspace = true
anychain-core.workspace = true
anychain-tron.workspace = true
once_cell.workspace = true
dashmap.workspace = true
ethabi.workspace = true
bs58.workspace = true
